syntax = "proto3";

package tracking;

option java_multiple_files = true;
option java_package = "com.arago.tracking";

service TrackingService {
  rpc TrackAdImpression (TrackAdImpressionRequest) returns (TrackAdImpressionResponse);
}

message TrackAdImpressionRequest {
  string adId = 1;
}

// Response message indicating the success of the operation
message TrackAdImpressionResponse {
  bool success = 1;
  string message = 2;
}